Register autos from @Auto annotations on plan methods
Each auto used to be a class of its own whose only content was a driver
station name, a plan method to call, and an alliance encoded in its
superclass. Now an @Auto annotation on the plan method in Plans is the
whole op mode: PlanOpModes, an @OpModeRegistrar, registers a PlanOp for
every annotation, and a method annotated once per alliance is one op
mode per alliance. Alliance replaces the Blue/Red/Relative base classes,
and the auto package goes away.

Driver station names default to the method name, so DriveForward,
ScoreAThing, SpinnyThing and ForwardLeftBackwardRight are now spelled
driveForward, scoreAThing, spinnyThing and forwardLeftBackwardRight; the
Blue/Red variants keep their names.

The simulator's catalog no longer scans a package for auto classes: it
lists annotated op mode classes plus whatever each registrar registers,
by calling the registrar, so the bench lists exactly what the robot
controller would. Entries are keyed by driver station name, which the
controller requires to be unique and the catalog now refuses to
duplicate, and say where the code is. The child JVM resolves a run by
name from the same catalog, and announces when the op mode starts so
that loading the catalog does not count against the run's time.