@@ -4,13 +4,18 @@ import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.qualcomm.robotcore.eventloop.opmode.Autonomous;
+import com.qualcomm.robotcore.eventloop.opmode.OpModeRegistrar;
 import com.qualcomm.robotcore.eventloop.opmode.TeleOp;
 
+import org.firstinspires.ftc.robotcore.internal.opmode.OpModeMeta;
 import org.firstinspires.ftc.teamcode.base.OpMode;
+import org.firstinspires.ftc.teamcode.fakes.FakeOpModeManager;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -18,55 +23,60 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Enumeration;
+import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Supplier;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.stream.Stream;
 
 /**
- * The op modes that can be run in the simulator: every concrete {@link OpMode} of ours, anywhere
- * under the team code package, that carries the {@link Autonomous} or {@link TeleOp} annotation,
- * exactly as the robot controller would list them. A catalog discovered here can build its op
- * modes; one parsed from another JVM's listing ({@link #fromJson}) only names them.
+ * The op modes that can be run in the simulator, exactly as the robot controller would list them:
+ * every concrete {@link OpMode} of ours that carries the {@link Autonomous} or {@link TeleOp}
+ * annotation, plus every op mode of ours that a registrar ({@link OpModeRegistrar}) registers,
+ * found by calling the registrar itself. Entries are keyed by name, which the robot controller
+ * requires to be unique. A catalog built here can produce its op modes; one parsed from another
+ * JVM's listing ({@link #fromJson}) only names them.
  */
 public final class SimCatalog {
     public static final String TEAMCODE_PACKAGE = "org.firstinspires.ftc.teamcode";
+    /** Vendored Road Runner code: its op modes and registrars are not ours to simulate. */
+    public static final String ROADRUNNER_PACKAGE = TEAMCODE_PACKAGE + ".roadrunner";
     public static final String AUTO = "auto";
     public static final String TELEOP = "teleop";
 
     public static final class Entry {
+        /** The name on the driver station, unique in the catalog. */
         public final String name;
         public final String group;
         /** {@link #AUTO} or {@link #TELEOP}: an auto runs until its plan is done, a TeleOp until the driver stops it. */
         public final String kind;
-        public final String className;
-        /** The class when it is loadable in this JVM, null for an entry parsed from a listing. */
-        public final Class<? extends OpMode> type;
+        /** Where a person finds the op mode's code: a class, or a plan method. */
+        public final String where;
+        /** Produces the op mode as the robot controller would, or null for an entry parsed from a listing. */
+        private final Supplier<OpMode> opMode;
 
-        Entry(String name, String group, Class<? extends OpMode> type) {
-            this(name, group, kindOf(type), type.getName(), type);
-        }
-
-        Entry(String name, String group, String kind, String className, Class<? extends OpMode> type) {
+        Entry(String name, String group, String kind, String where, Supplier<OpMode> opMode) {
             this.name = name;
             this.group = group;
             this.kind = kind;
-            this.className = className;
-            this.type = type;
+            this.where = where;
+            this.opMode = opMode;
         }
 
-        public OpMode create() {
-            if (type == null) {
-                throw new IllegalStateException(className + " was listed by another JVM and cannot be built here");
+        /**
+         * The op mode as the robot controller runs it: the registered instance every time for an
+         * op mode registered by instance, a new instance each time for one registered as a class.
+         */
+        public OpMode opMode() {
+            if (opMode == null) {
+                throw new IllegalStateException(name + " was listed by another JVM and cannot be built here");
             }
-            try {
-                return type.getDeclaredConstructor().newInstance();
-            } catch (ReflectiveOperationException e) {
-                throw new IllegalStateException("could not construct " + type.getName(), e);
-            }
+            return opMode.get();
         }
 
         public JsonObject toJson() {
@@ -74,15 +84,17 @@ public final class SimCatalog {
             item.addProperty("name", name);
             item.addProperty("group", group);
             item.addProperty("kind", kind);
-            item.addProperty("opMode", className);
+            item.addProperty("where", where);
             return item;
         }
     }
 
     private final List<Entry> entries;
+    private final List<String> sources;
 
-    private SimCatalog(List<Entry> entries) {
+    private SimCatalog(List<Entry> entries, List<String> sources) {
         this.entries = entries;
+        this.sources = sources;
     }
 
     /**
@@ -94,15 +106,23 @@ public final class SimCatalog {
     }
 
     /**
-     * A catalog of exactly these op modes, for tests and tools that know what they want to run.
+     * A catalog of exactly these sources, for tests and tools that know what they want to run.
+     * A source is an annotated op mode class, or a class whose registrar registers op modes.
+     *
+     * @throws IllegalArgumentException for a class that is neither
      */
-    @SafeVarargs
-    public static SimCatalog of(Class<? extends OpMode>... types) {
+    public static SimCatalog of(Class<?>... sources) {
         List<Entry> entries = new ArrayList<>();
-        for (Class<? extends OpMode> type : types) {
-            entries.add(entryFor(type));
+        List<String> names = new ArrayList<>();
+        for (Class<?> source : sources) {
+            List<Entry> found = entriesFrom(source);
+            if (found == null) {
+                throw new IllegalArgumentException(source.getName() + " is neither an annotated op mode nor a registrar");
+            }
+            entries.addAll(found);
+            names.add(source.getName());
         }
-        return sorted(entries);
+        return sorted(entries, Collections.unmodifiableList(names));
     }
 
     /** Entries as another JVM listed them: names only, nothing to build. */
@@ -110,13 +130,13 @@ public final class SimCatalog {
         List<Entry> entries = new ArrayList<>();
         for (JsonElement element : json) {
             JsonObject item = element.getAsJsonObject();
-            if (!item.has("kind")) {
-                throw new IllegalArgumentException("a listing without the kind of each op mode: " + item);
+            if (!item.has("kind") || !item.has("where")) {
+                throw new IllegalArgumentException("a listing without the kind and place of each op mode: " + item);
             }
             entries.add(new Entry(item.get("name").getAsString(), item.get("group").getAsString(),
-                    item.get("kind").getAsString(), item.get("opMode").getAsString(), null));
+                    item.get("kind").getAsString(), item.get("where").getAsString(), null));
         }
-        return new SimCatalog(Collections.unmodifiableList(entries));
+        return new SimCatalog(Collections.unmodifiableList(entries), List.of());
     }
 
     public JsonArray toJson() {
@@ -127,22 +147,68 @@ public final class SimCatalog {
         return json;
     }
 
+    /**
+     * Every op mode a top-level class under the team code package declares or registers, other
+     * than Road Runner's.
+     */
     public static SimCatalog discover() {
         List<Entry> entries = new ArrayList<>();
         for (Class<?> type : classesUnder(TEAMCODE_PACKAGE)) {
-            boolean registered = type.getAnnotation(Autonomous.class) != null || type.getAnnotation(TeleOp.class) != null;
-            if (!registered || Modifier.isAbstract(type.getModifiers()) || !OpMode.class.isAssignableFrom(type)) {
+            if (type.getName().startsWith(ROADRUNNER_PACKAGE + ".")) {
                 continue;
             }
-            entries.add(entryFor(type.asSubclass(OpMode.class)));
+            List<Entry> found = entriesFrom(type);
+            if (found != null) {
+                entries.addAll(found);
+            }
         }
-        return sorted(entries);
+        return sorted(entries, List.of());
     }
 
-    /** Autos first, then TeleOps, each by name. */
-    private static SimCatalog sorted(List<Entry> entries) {
+    /**
+     * The classes this catalog was built from, for another JVM to build the same; empty when it
+     * was discovered, which another JVM does alike.
+     */
+    public List<String> sources() {
+        return sources;
+    }
+
+    /** Autos first, then TeleOps, each by name; a name used twice is refused as the robot controller would. */
+    private static SimCatalog sorted(List<Entry> entries, List<String> sources) {
+        Map<String, Entry> byName = new HashMap<>();
+        for (Entry entry : entries) {
+            Entry other = byName.put(entry.name, entry);
+            if (other != null) {
+                throw new IllegalStateException("two op modes are named " + entry.name + ": " + other.where + " and " + entry.where);
+            }
+        }
         entries.sort(Comparator.comparing((Entry e) -> e.kind).thenComparing(e -> e.name));
-        return new SimCatalog(Collections.unmodifiableList(entries));
+        return new SimCatalog(Collections.unmodifiableList(entries), sources);
+    }
+
+    /**
+     * The op modes a class contributes: itself when it is a concrete annotated {@link OpMode} of
+     * ours, what its registrars register when it has any, and null when it is neither.
+     */
+    private static List<Entry> entriesFrom(Class<?> type) {
+        boolean annotated = type.getAnnotation(Autonomous.class) != null || type.getAnnotation(TeleOp.class) != null;
+        List<Method> registrars = new ArrayList<>();
+        for (Method method : type.getDeclaredMethods()) {
+            if (method.getAnnotation(OpModeRegistrar.class) != null && Modifier.isStatic(method.getModifiers())) {
+                registrars.add(method);
+            }
+        }
+        if (!annotated && registrars.isEmpty()) {
+            return null;
+        }
+        List<Entry> entries = new ArrayList<>();
+        if (annotated && !Modifier.isAbstract(type.getModifiers()) && OpMode.class.isAssignableFrom(type)) {
+            entries.add(entryFor(type.asSubclass(OpMode.class)));
+        }
+        for (Method registrar : registrars) {
+            entries.addAll(registeredBy(registrar));
+        }
+        return entries;
     }
 
     private static Entry entryFor(Class<? extends OpMode> type) {
@@ -150,15 +216,57 @@ public final class SimCatalog {
         TeleOp teleOp = type.getAnnotation(TeleOp.class);
         String name = auto != null ? auto.name() : teleOp != null ? teleOp.name() : "";
         String group = auto != null ? auto.group() : teleOp != null ? teleOp.group() : "";
-        return new Entry(name.isEmpty() ? type.getSimpleName() : name, group, type);
+        return new Entry(name.isEmpty() ? type.getSimpleName() : name, group, kindOf(type), type.getName(),
+                () -> construct(type));
+    }
+
+    private static OpMode construct(Class<? extends OpMode> type) {
+        try {
+            return type.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
+            throw new IllegalStateException("could not construct " + type.getName(), e);
+        }
+    }
+
+    /**
+     * What a registrar registers that is ours to run. A registrar that fails would stop the robot
+     * controller too, so it fails the catalog rather than listing less.
+     */
+    private static List<Entry> registeredBy(Method registrar) {
+        FakeOpModeManager manager = new FakeOpModeManager();
+        try {
+            registrar.setAccessible(true);
+            registrar.invoke(null, manager);
+        } catch (InvocationTargetException e) {
+            throw new IllegalStateException("the registrar " + registrar.getDeclaringClass().getName() + "." + registrar.getName()
+                    + " failed", e.getCause());
+        } catch (IllegalAccessException | IllegalArgumentException e) {
+            throw new IllegalStateException("could not call the registrar " + registrar, e);
+        }
+        List<Entry> entries = new ArrayList<>();
+        for (FakeOpModeManager.Registration registration : manager.registrations) {
+            boolean ours = registration.instance != null
+                    ? registration.instance instanceof OpMode
+                    : OpMode.class.isAssignableFrom(registration.type);
+            if (!ours) {
+                continue;
+            }
+            String where = registration.instance != null
+                    ? ((OpMode) registration.instance).where()
+                    : registration.type.getName();
+            String kind = registration.meta.flavor == OpModeMeta.Flavor.TELEOP ? TELEOP : AUTO;
+            entries.add(new Entry(registration.meta.name, registration.meta.group, kind, where,
+                    () -> (OpMode) registration.opMode()));
+        }
+        return entries;
     }
 
     public List<Entry> entries() {
         return entries;
     }
 
-    public Optional<Entry> find(String className) {
-        return entries.stream().filter(e -> e.className.equals(className)).findFirst();
+    public Optional<Entry> find(String name) {
+        return entries.stream().filter(e -> e.name.equals(name)).findFirst();
     }
 
     /**
